# ai-scientist-training

./: .gitignore  README.md  pyproject.toml
configs/: base_model_eval_summary.json  base_model_eval_summary_grpo8.json  epistemic_taste_grpo.toml  example_trajectories.jsonl  research_hypothesis_analysis_grpo.toml
docs/: pretraining-gate-report-2026-03-22.md
environments/epistemic_taste/: README.md  pyproject.toml
environments/epistemic_taste/epistemic_taste/: __init__.py  bayes.py  dataset.py  epistemic_taste.py
environments/epistemic_taste/epistemic_taste/data/: dev.jsonl  manifest.json  test.jsonl
environments/epistemic_taste/tests/: test_epistemic_taste.py
environments/research_hypothesis_analysis/: README.md  pyproject.toml
environments/research_hypothesis_analysis/epistemic_taste/: __init__.py
environments/research_hypothesis_analysis/research_hypothesis_analysis/: bayes.py  dataset.py  environment.py
environments/research_hypothesis_analysis/research_hypothesis_analysis/data/: dev.jsonl  manifest.json  test.jsonl
environments/research_hypothesis_analysis/tests/: test_environment.py
scripts/: _common.py  _epistemic_common.py  base_model_eval.py  dump_example_trajectories.py  generate_dataset.py  generate_epistemic_taste_dataset.py  heldout_eval.py  reward_variance_gate.py  verify_dataset.py
